# CloudClaw

./: .gitignore  CHANGELOG.md  DEVELOPER_GUIDE.md  README.md  main.py  pyproject.toml  requirements.txt  start_all.bat  start_live.bat  start_web.bat  stop_web.bat
.github/workflows/: ci.yml
cloudclaw/: __init__.py  backtest_engine.py  cli.py  config.py  data_manager.py  indicators.py
cloudclaw/strategies/: __init__.py  base.py  dragon_head.py  sparrow.py  turtle.py  value_invest.py
cloudknight/: __init__.py  auction_analyzer.py  backtest_engine.py  backtest_metrics.py  cli.py  config.py  data_manager.py  factor_engine.py  indicators.py  live_engine.py  market_analyzer.py  ml_engine.py  ops_monitor.py  paper_trader.py  param_optimizer.py  risk_manager.py  sector_fallback.py  signal_hunter.py  stock_diagnose.py  stock_info_cache.py  stock_pool.py  trading_calendar.py  version.py  web_server.py
cloudknight/datasource/: __init__.py  base.py  choice_source.py  ibkr_source.py  manager.py  tushare_source.py
cloudknight/static/: dashboard.html  diagnose.html
cloudknight/strategies/: __init__.py  base.py  bollinger.py  dragon_head.py  grid.py  high_growth.py  ma_cross.py  sparrow.py  trend_accel.py  turtle.py  value_invest.py  volume_breakout.py
tools/: test_fallback_chains.py  test_output.txt
