[project]
name = "cloudknight"
version = "2.8.0"
description = "CloudKnight - 云侠量化交易系统 | AKQuant高性能事件驱动回测引擎"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "CloudKnight" }]
dependencies = [
    "akshare>=1.12.0",
    "akquant>=0.2.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "tabulate>=0.9.0",
    "sqlalchemy>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pyright>=1.1.380",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "bandit>=1.7.0",
    "coverage>=7.0.0",
]

# ==================== Ruff (Linter + Formatter) ====================
[tool.ruff]
target-version = "py311"
line-length = 120
extend-exclude = [
    ".git",
    ".codebuddy",
    "__pycache__",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    "venv",
    ".venv",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes (unused imports, undefined names)
    "I",    # isort (import ordering)
    "N",    # pep8-naming
    "B",    # flake8-bugbear (common bugs)
    "SIM",  # flake8-simplify (simplify code)
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade (modern syntax)
    "RUF",  # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "SIM108", # use ternary operator (personal preference)
    "RUF001", # ambiguous unicode — 中文项目使用全角标点属正常
    "RUF002", # ambiguous unicode in docstring — 中文项目正常
    "RUF003", # ambiguous unicode in comment — 中文项目正常
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
known-first-party = ["cloudknight"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ==================== Pyright (Type Checker) ====================
[tool.pyright]
include = ["cloudknight"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "**/.*",
    "build",
    "dist",
]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
# 量化项目特殊放宽：pandas/第三方库的类型推断噪音
reportGeneralTypeIssues = "warning"
reportCallIssue = "warning"
reportArgumentType = "warning"
reportAttributeAccessIssue = "warning"
reportOperatorIssue = "warning"
# 保留严格检查
reportOptionalMemberAccess = "warning"
reportOptionalSubscript = "warning"
reportOptionalIterable = "warning"
reportUnusedImport = "warning"
reportUnusedVariable = "warning"
# 量化项目常见：动态数据帧操作
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownParameterType = false
reportUnknownLambdaType = false
reportIndexIssue = "warning"

# ==================== pytest ====================
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tools", "tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# ==================== Bandit (Security) ====================
[tool.bandit]
exclude_dirs = [".git", ".codebuddy", "__pycache__", ".mypy_cache", ".pytest_cache", "venv", ".venv", "build", "dist", "tools"]
skips = ["B101", "B104", "B301", "B311"]
# B101: assert — test code常见
# B104: hardcoded_bind_all_interfaces — web server normal
# B301: pickle — 某些场景合理
# B311: random — 非加密场景

# ==================== Coverage ====================
[tool.coverage.run]
source = ["cloudknight"]
omit = [
    "*/tests/*",
    "*/test_*",
    "tools/*",
    "cloudknight/static/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
